# Bloome-PortfolioManagement

./: .gitignore  ;  Dockerfile  README.md  Team02- User Stories.xlsx  app.py  db.py  docker-compose.yml  init_db.py  mail.py  pyproject.toml  queries.py  requirements.txt  routes.py  stocks.txt  task_allocation_final.xlsx
aglie-stuff/: Team02-User Stories.xlsx
app/: app.py  auth.py  helper.py  init_db.py  mail.py  queries.py  routes.py
app/static/css/: admin.css  style.css  watchlist.css
app/templates/: admin.html  dashboard.html  holdings.html  landing.html  login.html  news.html  signup.html  transactions.html  watchlist.html
app/workers/: news_updater.py  stock_updater.py
static/css/: style.css
templates/: chart.html  landing.html  login.html  news.html  signup.html
