[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "finnhub-python>=2.4.28",
    "flask>=3.1.3",
    "flask-mail>=0.10.0",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.7.0",
    "yfinance>=1.4.1",
]
